
Die neue mobile Variante von kivitendo kann Handyfotos an Lieferscheine hinzufügen.
Das Feature setzt ein mobiles Endgerät voraus, aufgrund dessen wird ein passendes
CSS-Design im Android-Stil geladen und über die Suche nach einem Lieferschein lassen
sich aufgenommen Fotos hochladen. Die Funktion benötigt ein aktiviertes DMS innerhalb
von kivitendo.


Mittelgroße neue Features:

Kleinere neue Features und Detailverbesserungen:

- neue Druckvorlagen-Variante "Rechnungskopie", die mit dem Druckvorlagensatz marei
  ein Wasserzeichen "Rechnungskopie" bei Verkaufs-Rechnungen erzeugt
- Alle HTML-Textfelder benutzen die Rechtschreibprüfung des Anwender-Browser und
  markieren unbekannte Worte (Tippfehler) mit einer roten gewellten Linie
- Prüfung, ob Kundenbestellnummer in Verkaufsaufträgen vorhanden ist, kann in der
  Mandantenkonfiguration eingestellt werden
- Optionale Warnung falls eine Verkaufsrechnung nicht aus einem Lieferschein
  erzeugt wurde (Konfigurierbar in der Mandantenkonfiguration)
- Die Ansicht der verknüpften Belegen kann unabhängig vom aktuellen Beleg immer
  vom Auftrag her aufgebaut werden
- SEPA-Überweisungen & -Bankeinzüge nutzen jetzt aktuelle Standard-Versionen, die
  momentan von der Kreditindustrie unterstützt werden.
- Pflichtenhefte: wenn man im Workflow vom Pflichtenheft ein neues
  Angebot anlegt und später von diesem Angebot aus einen Auftrag, so
  wird auch der Auftrag direkt mit dem Pflichtenheft verknüpft.
- Pflichtenhefte: wenn in einem Auftrag, das mit einem Pflichtenheft
  verknüpft ist, ein Projekt ausgewählt, so wird dieses Projekt auch
  automatisch beim verknüpften Pflichtenheft eingetragen.
- Druckvorlagen: die in Positionen verwendeten Variablen können nun
  Platzhalter enthalten, die vom Beleg selber stammen. So könnte
  z.B. in der Artikelbeschreibung automatisch die Rechnungsnummer
  ersetzt werden. Beispiel: »Abrechnungszeitraum bis <%invnumber%>«
- Verkaufs- & Einkaufsbelege: kivitendo kann so konfiguriert werden,